--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
   "name": "react-hooks-react-router-code-along",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "json-server": "^1.0.0-beta.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.19.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "vite": "^6.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "server": "json-server --watch db.json --port 4000",
-    "test": "jest"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "server": "json-server db.json -p 4000"
   },
   "eslintConfig": {
     "extends": [
